--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./js-problems/create-a-server.js"
+    "start": "nodemon ./node.js-problems/create-a-server.js"
   },
   "keywords": [],
   "author": "",
